# FCUL_ALS_Disease_Progression

./: .gitignore  FCUL_ALS_data_cleaning.ipynb  FCUL_ALS_data_cleaning.py  FCUL_ALS_data_exploration.ipynb  FCUL_ALS_data_exploration.py  FCUL_ALS_model_interpretability.ipynb  FCUL_ALS_model_interpretability.py  FCUL_ALS_pre_training_exploration.ipynb  ModelInterpreter.py  NeuralNetwork.py  README.md  Time_Series_Dataset.py  main.py  make_interpreter.py  parameter_optimization.py  pyproject.toml  random_experiments.ipynb  requirements.txt  utils.py  visualisation_experiments.ipynb  visualization_experiments.ipynb
hyperparameter_optimization/: RNN_embed_hyperparameter_optimization_config.yaml  RNN_ohe_hyperparameter_optimization_config.yaml  TLSTM_ohe_hyperparameter_optimization_config.yaml
metrics/: lstm_bidir_one_hot_encoded_delta_ts_90dayswindow_0.3809valloss_06_07_2020_04_08.yml  lstm_bidir_pre_embedded_delta_ts_90dayswindow_0.3481valloss_06_07_2020_04_15.yml  lstm_one_hot_encoded_90dayswindow_0.4363valloss_06_07_2020_03_28.yml  mf1lstm_one_hot_encoded_90dayswindow_0.6009valloss_07_07_2020_03_46.yml  rnn_bidir_pre_embedded_delta_ts_90dayswindow_0.3059valloss_06_07_2020_03_10.yml
metrics/aggregate/: logreg.yml  lstm_bidir_one_hot_encoded_90dayswindow.yml  svm.yml  xgb.yml  (+21 more)
notebooks/: FCUL_ALS_data_cleaning.ipynb  FCUL_ALS_data_cleaning.py  FCUL_ALS_pre_training_exploration.ipynb  data-cleaning.ipynb  data-cleaning.py  data-exploration.ipynb  data-exploration.py  latex-metrics.ipynb  latex-metrics.py  model-interpretability.ipynb  model-interpretability.py  model-training.ipynb  model-training.py  performance-testing.ipynb  performance-testing.py  pre-training-exploration.ipynb  pre-training-exploration.py
scripts/: ModelInterpreter.py  Models.py  NeuralNetwork.py  make_interpreter.py  utils.py
(+22 files in other folders)
