[tool.poetry]
name = "fcul_als_disease_progression"
version = "0.1.0"
description = "Analysing disease progression with interpretable deep learning models, on a ALS dataset from Faculdade de Ciências da Universidade de Lisboa (FCUL)."
authors = ["AndreCNF <andrecnf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.32"
torch = "^1.1"
scikit-learn = "^0.21.2"
plotly = "^3.9"
numpy = "^1.16"
pandas = "^0.24.2"
colorlover = "^0.3.0"
comet_ml = "^1.0"
shap = { git = "https://github.com/AndreCNF/shap.git", branch = "master" }

[tool.poetry.dev-dependencies]
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
