[tool.poetry]
name = "fcul_als_disease_progression"
version = "0.1.0"
description = "Analysing disease progression with interpretable deep learning models, on a ALS dataset from Faculdade de Ciências da Universidade de Lisboa (FCUL)."
authors = ["AndreCNF <andrecnf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
tqdm = "^4.46.1"
torch = "^1.1"
scikit-learn = "^0.21.2"
plotly = "^4.8.1"
numpy = "^1.16"
pandas = "1.0.3"
colorlover = "^0.3.0"
shap = { git = "https://github.com/AndreCNF/shap.git", branch = "master" }
data-utils = {git = "https://github.com/AndreCNF/data-utils.git"}
model-interpreter = {git = "https://github.com/AndreCNF/model-interpreter.git"}
ipykernel = "^5.3.0"
configobj = "^5.0.6"
comet_ml = "^3.1.12"
nbformat = "^5.0.7"
dash_bootstrap_components = "^0.10.2"
dash = "^1.13.4"
dash_table = "^4.8.1"
ipywidgets = "^7.5.1"
pixiedust = "^1.1.18"
xgboost = "^1.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
